# just-for-fun

./: README.md  acupoint.py  five in a row.py  super_Tic_Tac_Toe.cpp
2048/: 2048(gift for little orange's birthday).c
SmartGames_2D_solution/: README.md  board.txt  main.cpp  origin_board_1.txt  origin_used.txt  used.txt
acupoint/: acupoint.py
five_in_a_row_with_gui/: fiverow.py  gui.py
splitwav_by_vad/: .cal_pcm_tail.py.swp  README.md  batch_split.sh  batch_statis.sh  cal_pcm_tail.py  split.go  split.sh  vad.go  vad.toml
splitwav_by_vad/include/: vad.h
vad/: README.md  run.sh  vad.c  vad.go  vad.toml
vad_baidu/: CMakeLists.txt  build.sh  main.go  run.sh  vad.go
vad_baidu/include/: vad.h
vad_baidu/src/: common.h  file_cut.c  file_cut.h  vad.c
统计docx的每段字数/: count txt write excel.py  count words in docx.py
